WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268360
[UnifiedPDF] Text annotation HTML inputs do not get repositioned or scaled when zooming
https://bugs.webkit.org/show_bug.cgi?id=268360
Summary
[UnifiedPDF] Text annotation HTML inputs do not get repositioned or scaled wh...
Sammy Gill
Reported
2024-01-29 22:44:08 PST
When a text annotation is active, zooming in/out should scale the html input element properly and also reposition it so that it is still over the same field in the PDF
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 22:44:29 PST
<
rdar://problem/121907350
>
Sammy Gill
Comment 2
2024-01-31 15:31:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23626
EWS
Comment 3
2024-02-02 23:20:38 PST
Committed
274038@main
(9e6c27d881d0): <
https://commits.webkit.org/274038@main
> Reviewed commits have been landed. Closing PR #23626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug